--- a/FinalProject.ipynb
+++ b/FinalProject.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import OneHotEncoder\n",
     "from sklearn.preprocessing import LabelEncoder\n",
-    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.metrics import r2_score\n",
     "\n",
     "%matplotlib inline"
@@ -540,11 +540,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
-    "feature_names = ['usd_pledged_real','usd_goal_real','timediffdays','maincat','backers']\n",
+    "feature_names = ['usd_goal_real','timediffdays','maincat','backers','usd_pledged_real']\n",
     "features = df[feature_names]\n",
     "labels = df['state_encoded']\n",
     "\n",
@@ -554,54 +554,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "RandomForestRegressor(bootstrap=True, criterion='mse', max_depth=None,\n",
-       "                      max_features='auto', max_leaf_nodes=None,\n",
-       "                      min_impurity_decrease=0.0, min_impurity_split=None,\n",
-       "                      min_samples_leaf=1, min_samples_split=2,\n",
-       "                      min_weight_fraction_leaf=0.0, n_estimators=100,\n",
-       "                      n_jobs=None, oob_score=False, random_state=None,\n",
-       "                      verbose=0, warm_start=False)"
-      ]
-     },
-     "execution_count": 100,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random Tree Best Classifier\n",
+      "best accuracy score : 0.9264720694587135\n",
+      "true [[148769   9719]\n",
+      " [  8923  80793]] \n",
+      " predicted\n",
+      "{'n_estimators': array([10, 20]), 'max_depth': [3, 4, 5], 'min_samples_split': array([2, 4]), 'min_samples_leaf': array([2, 4])}\n"
+     ]
     }
    ],
    "source": [
-    "model = RandomForestRegressor(\n",
-    "                                n_estimators=100\n",
-    "                             )\n",
-    "model.fit(x_train, y_train)"
+    "from sklearn.model_selection import cross_val_predict\n",
+    "from sklearn.model_selection import cross_validate\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "\n",
+    "model = RandomForestClassifier(n_estimators=100)\n",
+    "scoring = 'accuracy'\n",
+    "# estimates accuracy\n",
+    "scores = cross_validate(model, x_train, y_train, scoring=[scoring] , cv=5)\n",
+    "best_score = np.max(scores['test_' + scoring])\n",
+    "print('Random Tree Best Classifier')\n",
+    "print('best {0} score : {1}'.format(scoring, best_score))\n",
+    "# create predictions \n",
+    "y_pred = cross_val_predict(model, x_train, y_train, cv = 5)\n",
+    "print('true', confusion_matrix(y_train, y_pred), '\\n predicted')\n",
+    "\n",
+    "# Number of trees in random forest\n",
+    "n_estimators  = np.arange(10,30, 10)\n",
+    "# Number of features to consider at every split\n",
+    "# Maximum number of levels in tree\n",
+    "max_depth = [3,4,5]\n",
+    "# Minimum number of samples required to split a node\n",
+    "min_samples_split = np.arange(2, 6, 2)\n",
+    "# Minimum number of samples required at each leaf node\n",
+    "min_samples_leaf = np.arange(2, 6,2)\n",
+    "# Method of selecting samples for training each tree\n",
+    "param_grid= {'n_estimators': n_estimators,\n",
+    "               'max_depth': max_depth,\n",
+    "               'min_samples_split': min_samples_split,\n",
+    "               'min_samples_leaf': min_samples_leaf}\n",
+    "print(param_grid)\n",
+    "\n",
+    "model = RandomForestClassifier(n_estimators=10)\n",
+    "model = GridSearchCV(model, param_grid = param_grid,cv = 3,scoring=scoring, n_jobs = -1,  refit=True)\n",
+    "\n",
+    "model = model.fit(x_train, y_train)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.9886599715044325"
-      ]
-     },
-     "execution_count": 101,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "predicted probablities: [0.00975981 0.00954833 0.34742049 0.02015729 0.01859337]\n",
+      "predicted labeles: [0 0 0 0 0]\n",
+      "test AUC 0.9710143324463664\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.95      0.92      0.94     78010\n",
+      "           1       0.86      0.92      0.89     44240\n",
+      "\n",
+      "    accuracy                           0.92    122250\n",
+      "   macro avg       0.91      0.92      0.91    122250\n",
+      "weighted avg       0.92      0.92      0.92    122250\n",
+      "\n",
+      "TN, FP \n",
+      " FN TP\n",
+      "[[71500  6510]\n",
+      " [ 3402 40838]]\n"
+     ]
     }
    ],
    "source": [
-    "test_preds = model.predict(x_test)\n",
+    "from sklearn.metrics import roc_auc_score,  classification_report, confusion_matrix\n",
     "\n",
-    "r2 = r2_score(y_test, test_preds)\n",
-    "r2"
+    "## Predict Data in the Test Set\n",
+    "pred_test = model.predict_proba(x_test)[:, 1]\n",
+    "pred_labels_test = model.predict(x_test)\n",
+    "print('predicted probablities: {}'.format(pred_test[0:5]))\n",
+    "print('predicted labeles: {}'.format(pred_labels_test[0:5]) )\n",
+    "\n",
+    "# roc Auc score \n",
+    "test_auc = roc_auc_score(y_test, pred_test)\n",
+    "print('test AUC {}'.format(test_auc))\n",
+    "\n",
+    "# classifcation Report \n",
+    "report = classification_report(y_test, pred_labels_test)\n",
+    "print(report)\n",
+    "\n",
+    "# confusion Matrix\n",
+    "cm = confusion_matrix(y_test, pred_labels_test)\n",
+    "\n",
+    "print('TN, FP \\n FN TP')\n",
+    "print(cm)"
    ]
   },
   {
